fix: 修复图标不显示问题

--- a/src/components/style/flow-designer.less
+++ b/src/components/style/flow-designer.less
@@ -33,6 +33,7 @@
     height: 26px;
     line-height: 22px;
     color: #fff;
+    width: 100%;
   }
   .ant-row {
     padding-bottom: 10px;
@@ -51,7 +52,7 @@
   position: relative;
   z-index: 1000;
   &__tools {
-    span {
+    > span {
       margin-right: 6px;
     }
   }
@@ -60,6 +61,7 @@
 .header-option-button {
   border: 0;
   margin-left: 8px;
+  color: #333;
 }
 
 .content {
