feat: 入口页改造

--- a/src/components/assets/style/flow-designer.less
+++ b/src/components/assets/style/flow-designer.less
@@ -2,14 +2,14 @@
 
 .container {
   height: 100%;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  -o-user-select: none;
+  user-select: none;
+  user-select: none;
+  user-select: none;
+  user-select: none;
   user-select: none;
 
   .ant-list-item {
-    margin-bottom: 8px!important;
+    margin-bottom: 8px !important;
   }
 
   .ant-list {
@@ -22,6 +22,7 @@
   position: relative;
   z-index: 10000;
   box-shadow: 3px 0 10px #999;
+
   .tab {
     background-color: #002752;
     border-top: 1px dashed @primary-color;
@@ -35,6 +36,7 @@
     color: #fff;
     width: 100%;
   }
+
   .ant-row {
     padding-bottom: 10px;
   }
@@ -51,6 +53,7 @@
   box-shadow: 0 3px 5px #ddd;
   position: relative;
   z-index: 1000;
+
   &__tools {
     > span {
       margin-right: 6px;
@@ -67,7 +70,7 @@
 .content {
   background: #fafafa;
   height: 100%;
-  border: 1px dashed rgba(170, 170, 170, 0.7);
+  border: 1px dashed rgb(170 170 170 / 70%);
 }
 
 .ant-layout-footer {
