modify: 属性区样式

--- a/src/components/assets/style/flow-attr.less
+++ b/src/components/assets/style/flow-attr.less
@@ -1,7 +1,26 @@
 .attr-area {
   box-shadow: -3px 0 10px #ddd;
+  position: relative;
+  z-index: 1001;
 }
 
 .ant-form-item {
-  margin: 0 15px 10px;
+  margin: 0 10px;
+}
+
+.ant-tabs-nav-wrap {
+  padding: 0 0 0 10px;
+}
+
+.ant-tabs-tab {
+  margin-right: 10px !important;
+}
+
+.ant-tabs-tab .anticon {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+
+.ant-tabs-tab + .ant-tabs-tab {
+  margin: 0 0 0 20px;
 }
