modify: 属性区样式

--- a/src/components/assets/style/flow-attr.less
+++ b/src/components/assets/style/flow-attr.less
@@ -2,25 +2,30 @@
   box-shadow: -3px 0 10px #ddd;
   position: relative;
   z-index: 1001;
-}
 
-.ant-form-item {
-  margin: 0 10px;
-}
+  .ant-tabs-nav {
+    margin: 0 !important;
+  }
 
-.ant-tabs-nav-wrap {
-  padding: 0 0 0 10px;
-}
+  .ant-form-item {
+    padding: 10px;
+    margin-bottom: 0;
+  }
 
-.ant-tabs-tab {
-  margin-right: 10px !important;
-}
+  .ant-tabs-nav-wrap {
+    padding: 0 0 0 10px;
+  }
 
-.ant-tabs-tab .anticon {
-  margin-left: 0 !important;
-  margin-right: 0 !important;
-}
+  .ant-tabs-tab {
+    margin-right: 10px !important;
+  }
 
-.ant-tabs-tab + .ant-tabs-tab {
-  margin: 0 0 0 20px;
+  .ant-tabs-tab .anticon {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+
+  .ant-tabs-tab + .ant-tabs-tab {
+    margin: 0 0 0 20px;
+  }
 }
