fix: 解决类型错误

--- a/src/assets/style/flow-node.less
+++ b/src/assets/style/flow-node.less
@@ -89,7 +89,7 @@
   }
 }
 
-.common-x-lane-node {
+.common-x_lane-node {
   position: absolute;
   text-align: center;
   border: 1px solid #777;
@@ -122,7 +122,7 @@
   }
 }
 
-.common-y-lane-node {
+.common-y_lane-node {
   position: absolute;
   text-align: center;
   border: 1px solid #777;
