--- a/src/assets/style/flow-node.less
+++ b/src/assets/style/flow-node.less
@@ -12,6 +12,7 @@
   border-radius: 50%;
   background-color: @common-node-bg;
   white-space: nowrap;
+  box-shadow: 2px 2px 5px #ddd;
 
   &:hover {
     background-color: @common-node-bg-hover;
@@ -24,12 +25,12 @@
   }
 
   &.isStart {
-    background-color: #2fce2f;
+    background-color: #65cf38;
     color: #fff;
   }
 
   &.isEnd {
-    background-color: #f35753;
+    background-color: #f50;
     color: #fff;
   }
 }
@@ -44,6 +45,7 @@
   border-radius: 5px;
   background-color: @common-node-bg;
   white-space: nowrap;
+  box-shadow: 2px 2px 5px #ddd;
 
   &:hover {
     background-color: @common-node-bg-hover;
@@ -95,6 +97,7 @@
   border: 1px solid #777;
   border-radius: 2px;
   z-index: -1;
+  box-shadow: 2px 2px 5px #ddd;
 
   &.active {
     outline: 2px dashed @common-node-active;
@@ -128,6 +131,7 @@
   border: 1px solid #777;
   border-radius: 2px;
   z-index: -1;
+  box-shadow: 2px 2px 5px #ddd;
 
   &.active {
     outline: 2px dashed @common-node-active;
