fix: 修复快捷键问题

--- a/src/assets/style/flow-designer.less
+++ b/src/assets/style/flow-designer.less
@@ -74,8 +74,9 @@
 }
 
 .foot {
-  height: auto;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .tag {
