--- a/src/assets/style/flow-designer.less
+++ b/src/assets/style/flow-designer.less
@@ -1,6 +1,6 @@
 @primary-color: #0960bd;
 
-.container {
+.flow-wrapper {
   height: 100%;
   user-select: none;
 
@@ -13,7 +13,7 @@
   }
 }
 
-.select-area {
+.flow-element {
   background-color: #001529;
   position: relative;
   z-index: 10000;
