--- a/src/assets/style/flow-designer.less
+++ b/src/assets/style/flow-designer.less
@@ -55,32 +55,28 @@
       margin-right: 6px;
     }
   }
+
+  &__button {
+    border: 0;
+    margin-left: 8px;
+    color: #333;
+  }
 }
 
-.header-option-button {
-  border: 0;
-  margin-left: 8px;
-  color: #333;
-}
-
-.content {
+.flow-content {
   background: #fafafa;
   height: 100%;
   border: 1px dashed rgb(170 170 170 / 70%);
 }
 
-.ant-layout-footer {
-  padding: 4px 8px;
-}
-
-.foot {
+.flow-footer {
   display: flex;
   justify-content: center;
   align-items: center;
-}
 
-.tag {
-  margin: 6px;
+  &.ant-layout-footer {
+    padding: 4px 8px;
+  }
 }
 
 .node-item {
